@@ -1,3 +1,4 @@
 usr/share/apport/*gtk*
 usr/share/locale
 usr/share/icons
+../../gtk/apport-gtk.desktop usr/share/applications
