@@ -1,0 +1,9 @@
+top_srcdir = ..
+
+all: apport-gtk.desktop
+
+%.desktop : %.desktop.in
+	intltool-merge -d ${top_srcdir}/po/ $< $@
+
+clean:
+	rm -f *.desktop
