@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Report a problem...
+_Comment=Report a malfunction in Ubuntu to the developers
+Exec=/usr/share/apport/apport-gtk -f
+Icon=apport
+Terminal=false
+Type=Application
+Categories=GNOME;Application;Core;
+StartupNotify=true
+X-Ubuntu-Gettext-Domain=apport
