@@ -1,4 +1,5 @@
 [encoding: UTF-8]
 gtk/apport-gtk
 gtk/apport-gtk.glade
+gtk/apport-gtk.desktop.in
 apport/ui.py
