@@ -16,8 +16,13 @@ apport (0.47) UNRELEASED; urgency=low
   * backends/packaging-dpkg.py, _init_status(): Add missing space to Depends:
     field format in dpkg-query call. This fixes the chopped-off first letters
     in the 'Dependencies' report field.
+  * Add gtk/apport-gtk.desktop.in: Desktop file for calling apport-gtk in
+    'file a distro bug' mode, to be displayed in gnome-panel's System menu
+    (see bug-reporting-tool spec). Also add a Makefile to do the
+    intltool-merge dance, add it to POTFILES.in, and ship it in
+    debian/apport-gtk.install.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 10:19:17 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 15:52:35 +0100
 
 apport (0.46) feisty; urgency=low
 
